# docker-msvc-cpp

./: .dockerignore  .gitignore  LICENSE  README.md  build-docker-images.sh  docker-compose.yml  download-tools.sh
base/: Dockerfile  Dockerfile.wine  xvfb-start.sh
msvc-cpp/: Dockerfile  Dockerfile.msvc  bashrc  msvcenv_x64.bat  msvcenv_x86.bat  wine64-entrypoint  x64.bat  x86.bat
msvc-cpp-extended/: Dockerfile  Dockerfile.tools  bashrc  msvcenv_x64.bat  msvcenv_x86.bat
msvc-cpp-extended/.conan/profiles/: default  win32
msvc-cpp/.conan/profiles/: default  win32
msvc-cpp/.conan2/profiles/: default
test/: CMakeLists.txt  README.md  build.bat  conanfile.py  run.sh  test.cpp
vagrant/: Vagrantfile  install_tools.ps1
